--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jaredguerra/CodeAcademy.git"
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/Jaredguerra/CodeAcademy#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
